# LPGMCP

./: .gitignore  README.md
privacy-mcp/: README.md  policy.json  pyproject.toml
privacy-mcp/demo/: generate.py  policy.json
privacy-mcp/demo/sandbox/: README.md  intake_1.txt  intake_2.txt  intake_3.txt  intake_4.txt  intake_5.txt  intake_6.txt
privacy-mcp/src/privacy_mcp/: server.py
privacy-mcp/src/privacy_mcp/core/: audit.py  pii_detect.py  policy.py  redact.py  sandbox.py
privacy-mcp/tests/: test_detect.py  test_sandbox.py
